bk_ida/gccida/c2/clear_reload_reg_in_use
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_reload_reg_in_use/src/reload1.c:4723:63: error: must use 'enum' tag to refer to type 'reload_type'
void  clear_reload_reg_in_use( unsigned int regno, int opnum, reload_type type, machine_mode mode) 
                                                              ^
                                                              enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_reload_reg_in_use/src/reload1.c:4723:81: error: must use 'enum' tag to refer to type 'machine_mode'
void  clear_reload_reg_in_use( unsigned int regno, int opnum, reload_type type, machine_mode mode) 
                                                                                ^
                                                                                enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_reload_reg_in_use/src/reload1.c:4775:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v7 = ( ( unsigned int)( mode_class_0[mode] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_reload_reg_in_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_reload_reg_in_use/src/reload1.c:4848:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v18 = ( ( unsigned int)( mode_class_0[v16] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_reload_reg_in_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_reload_reg_in_use/src/reload1.c:4883:15: error: use of undeclared identifier 'off_7088B8'
fancy_abort( &off_7088B8[4], 4328, "clear_reload_reg_in_use"); 
              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_reload_reg_in_use/src/reload1.c:4894:41: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned int' of different size
v25 = _mm_add_epi64( _mm_shuffle_epi32( ( __m128i)v5, 68), ( __m128i)xmm*(short *)0x641400); 
                                        ^~~~~~~~~~~~
/usr/lib/llvm-7/lib/clang/7.0.0/include/emmintrin.h:4347:52: note: expanded from macro '_mm_shuffle_epi32'
  (__m128i)__builtin_ia32_pshufd((__v4si)(__m128i)(a), (int)(imm))
                                                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_reload_reg_in_use/src/reload1.c:4894:70: error: use of undeclared identifier 'xmm'
v25 = _mm_add_epi64( _mm_shuffle_epi32( ( __m128i)v5, 68), ( __m128i)xmm*(short *)0x641400); 
                                                                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_reload_reg_in_use/src/reload1.c:4896:23: error: invalid conversion between vector type '__m128d' (vector of 2 'double' values) and integer type 'unsigned long long' of different size
v27 = _mm_shuffle_pd( ( __m128d)v21, ( __m128d)xmm*(short *)0x675E90, 2); 
                      ^~~~~~~~~~~~~
/usr/lib/llvm-7/lib/clang/7.0.0/include/emmintrin.h:4761:52: note: expanded from macro '_mm_shuffle_pd'
  (__m128d)__builtin_ia32_shufpd((__v2df)(__m128d)(a), (__v2df)(__m128d)(b), \
                                                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_reload_reg_in_use/src/reload1.c:4896:48: error: use of undeclared identifier 'xmm'
v27 = _mm_shuffle_pd( ( __m128d)v21, ( __m128d)xmm*(short *)0x675E90, 2); 
                                               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_reload_reg_in_use/src/reload1.c:4900:7: error: invalid conversion between vector type '__m128d' (vector of 2 'double' values) and integer type 'long long' of different size
v30 = ( __m128d)-1LL; 
      ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_reload_reg_in_use/src/reload1.c:4907:7: error: invalid conversion between vector type '__m128d' (vector of 2 'double' values) and integer type 'long long' of different size
v30 = ( __m128d)-1LL; 
      ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_reload_reg_in_use/src/reload1.c:4908:44: error: use of undeclared identifier 'xmm'
si128 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x641410); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_reload_reg_in_use/src/reload1.c:4909:42: error: use of undeclared identifier 'xmm'
v32 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x641420); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_reload_reg_in_use/src/reload1.c:4910:42: error: use of undeclared identifier 'xmm'
v33 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x641430); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_reload_reg_in_use/src/reload1.c:4911:42: error: use of undeclared identifier 'xmm'
v34 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x64E870); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_reload_reg_in_use/src/reload1.c:4912:42: error: use of undeclared identifier 'xmm'
v35 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x64E880); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_reload_reg_in_use/src/reload1.c:4917:17: error: member reference base type '__m128d' (vector of 2 'double' values) is not a structure or union
*( _QWORD *)&v36.m128d_f64[0] = v32.m128i_i64[0] << v25.m128i_i8[0]; 
             ~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_reload_reg_in_use/src/reload1.c:4917:36: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( _QWORD *)&v36.m128d_f64[0] = v32.m128i_i64[0] << v25.m128i_i8[0]; 
                                ~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_reload_reg_in_use/src/reload1.c:4917:56: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( _QWORD *)&v36.m128d_f64[0] = v32.m128i_i64[0] << v25.m128i_i8[0]; 
                                                    ~~~^~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_reload_reg_in_use/src/obj/reload1.o] Error 1
